<resources>
    <string name="app_name">StreetInt</string>

    <!-- MAIN ACTIVITY -->
    <string name="myprofile">My profile</string>
    <string name="motto">"It never gets easier,</string>
    <string name="motto2">you just get better"</string>
    <string name="mypersoworkout">My personal workout</string>
    <string name="allworkouts">All workouts</string>
    <string name="workout">workout</string>

    <!-- QUICK CHRONO -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="chrono1">25 sec</string>
    <string name="chrono2">1 min</string>
    <string name="chrono3">1 min 30</string>
    <string name="chrono4">2 min</string>
    <string name="chrono5">3 min</string>
    <string name="chrono6">5 min</string>
    <string name="skip">Skip</string>

    <!-- CHOOSEWORKOUT -->
    <string name="skills">Skills</string>

    <string name="your_workouts">Your workouts</string>
    <string name="intelligent_workout">Intelligent workout</string>
    <string name="create_a_workout">Create a workout</string>
    <string name="premade_workouts">Premade workouts</string>

    <!-- PREMADEWORKOUT-->
    <string name="filter">Filter</string>
    <string name="minutes">minutes</string>
    <string name="start">Start</string>
    <string name="quit">Quit</string>
    <string name="done">Done</string>
    <string name="end">END</string>
    <string name="exercises">Exercises</string>
    <string name="chart">Chart</string>
    <string name="_5">+5%</string>
    <string name="points">points</string>
    <string name="_60">60</string>
    <string name="level">Level</string>
    <string name="progression">Progression</string>
    <string name="progress">Progress</string>
    <string name="chest">chest</string>
    <string name="shoulder">shoulder</string>
    <string name="abs">abs</string>
    <string name="back">back</string>
    <string name="biceps">biceps</string>
    <string name="triceps">triceps</string>
    <string name="penis">penis</string>
    <string name="trapezius">trapezius</string>
    <string name="leg">leg</string>
    <string name="tempo_workout">Tempo Workout</string>
    <string name="created_workouts">Created workouts</string>
    <string name="random_workout">Random workout</string>
    <string name="lvl_1">- lvl 1 -</string>
    <string name="unknown_user">Unknown user</string>
    <string name="level_up_first">Level up first</string>
    <string name="choose_muscle">Choose a muscle</string>
    <string name="choose_an_exercise">Choose an exercise</string>
    <string name="workout_name">Workout Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_one">Create one</string>
    <string name="pull_up">Pull up</string>
    <string name="min">min</string>
    <string name="random_workout_generator">Random workout generator</string>


</resources>
