<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:context=".activities.MainActivity">


    <ImageView
            android:layout_width="0dp"
            android:contentDescription="@string/app_name"
            android:layout_height="wrap_content"
            android:src="@drawable/face_the_bar"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/home" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:scaleType="centerInside"
            android:adjustViewBounds="true" android:layout_marginBottom="9dp"/>

    <TextView
            android:text="@string/motto"
            android:fontFamily="@font/indie"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/home"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/motto"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintVertical_bias="0.3"/>

    <TextView
            android:text="@string/motto2"
            android:fontFamily="@font/indie"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/motto"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/motto2"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintVertical_bias="0.02"/>

    <Button
            android:text="@string/myprofile"
            android:layout_width="wrap_content"
            android:translationY="-30dp"
            android:padding="10sp"
            android:textSize="20sp"
            android:background="@drawable/round_corner_button"
            android:textColor="@color/black"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/home"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/myprofile" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.0"/>

    <Button
            android:text="@string/allworkouts"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/grey1"
            android:background="@color/blueDark"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:paddingTop="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/allworkouts"
            app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>