<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="7"
                  android:id="@+id/series"
                  android:layout_weight="1">
        <Button android:layout_width="0dp"
                android:textColor="@color/grey1"
                android:text="@string/zero"
                android:id="@+id/zero"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:background="@color/blueDark"
                android:layout_weight="1"
                android:layout_margin="5sp"/>
        <Button android:layout_width="0dp"
                android:textColor="@color/grey1"
                android:text="@string/one"
                android:id="@+id/one"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:background="@color/blueDark"
                android:layout_weight="1"
                android:layout_margin="5sp"/>
        <Button android:layout_width="0dp"
                android:textColor="@color/grey1"
                android:text="@string/two"
                android:id="@+id/two"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:background="@color/blueDark"
                android:layout_weight="1"
                android:layout_margin="5sp"/>
        <Button android:layout_width="0dp"
                android:textColor="@color/grey1"
                android:text="@string/three"
                android:id="@+id/three"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:background="@color/blueDark"
                android:layout_weight="1"
                android:layout_margin="5sp"/>
        <Button android:layout_width="0dp"
                android:textColor="@color/grey1"
                android:text="@string/four"
                android:id="@+id/four"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:background="@color/blueDark"
                android:layout_weight="1"
                android:layout_margin="5sp"/>
        <Button android:layout_width="0dp"
                android:textColor="@color/grey1"
                android:text="@string/five"
                android:id="@+id/five"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:background="@color/blueDark"
                android:layout_weight="1"
                android:layout_margin="5sp"/>
        <Button android:layout_width="0dp"
                android:textColor="@color/grey1"
                android:text="@string/six"
                android:id="@+id/six"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:background="@color/blueDark"
                android:layout_weight="1"
                android:layout_margin="5sp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_marginTop="10dp"
                  android:orientation="vertical"
                  android:id="@+id/time"
                  android:visibility="visible"
                  app:layout_constraintTop_toBottomOf="@+id/series"
                  android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">

            <Button
                    android:text="@string/chrono1"
                    android:textSize="30sp"
                    android:textColor="@color/grey1"
                    app:layout_constraintWidth_percent="50"
                    android:layout_width="0dp"
                    android:layout_margin="5dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button"
                    android:background="@drawable/button_dark_blue"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guideline"
                    app:layout_constraintHorizontal_weight="0.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="0.0"/>
            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>
            <Button
                    android:text="@string/chrono2"
                    android:layout_width="0dp"
                    android:textSize="30sp"
                    android:layout_margin="5dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/grey1"
                    android:background="@drawable/button_dark_blue"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="0.45"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/button2"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintVertical_bias="0.0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp">

                <Button
                        android:text="@string/chrono3"
                        android:textSize="30sp"
                        android:textColor="@color/grey1"
                        app:layout_constraintWidth_percent="50"
                        android:layout_width="0dp"
                        android:layout_margin="5dp"
                        android:layout_height="match_parent"
                        android:id="@+id/button3"
                        android:background="@drawable/button_dark_blue"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/guideline1"
                        app:layout_constraintHorizontal_weight="0.5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintVertical_bias="0.0"/>
                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline1"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5"/>
                <Button
                        android:text="@string/chrono4"
                        android:layout_width="0dp"
                        android:textSize="30sp"
                        android:layout_margin="5dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/grey1"
                        android:background="@drawable/button_dark_blue"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="@id/guideline1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="0.45"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/button4"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintVertical_bias="0.0"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp">

                <Button
                        android:text="@string/chrono5"
                        android:textSize="30sp"
                        android:textColor="@color/grey1"
                        app:layout_constraintWidth_percent="50"
                        android:layout_width="0dp"
                        android:layout_margin="5dp"
                        android:layout_height="match_parent"
                        android:id="@+id/button5"
                        android:background="@drawable/button_dark_blue"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/guideline2"
                        app:layout_constraintHorizontal_weight="0.5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintVertical_bias="0.0"/>
                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5"/>
                <Button
                        android:text="@string/chrono6"
                        android:layout_width="0dp"
                        android:textSize="30sp"
                        android:layout_margin="5dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/grey1"
                        android:background="@drawable/button_dark_blue"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="@id/guideline2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="0.45"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/button6"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintVertical_bias="0.0"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:id="@+id/countdown"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/series"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:id="@+id/countdown_time"
                android:textSize="40sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
        />
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.7"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/skip"
                android:id="@+id/skip"
                android:textColor="@color/grey1"
                android:textSize="30sp"
                android:background="@drawable/button_dark_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"

        />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
