<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <Button
            android:text="@string/create_a_workout"
            android:id="@+id/create"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:textColor="@color/grey1"
            android:background="@drawable/button_dark_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintWidth_percent="50"
            app:layout_constraintHeight_percent="50"
            android:layout_margin="5sp"
    />

    <Button
            android:text="@string/tempo_workout"
            android:id="@+id/tempo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:textColor="@color/grey1"
            android:background="@drawable/button_dark_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="50"
            app:layout_constraintHeight_percent="50"
            android:layout_margin="5sp"
    />

    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:textColor="@color/grey1"
            android:background="@drawable/button_dark_blue"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintWidth_percent="50"
            app:layout_constraintHeight_percent="50"
            android:layout_margin="5sp"
            android:text="@string/random_workout"
            android:id="@+id/random"
    />

    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:textColor="@color/grey1"
            android:background="@drawable/button_dark_blue"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="50"
            app:layout_constraintHeight_percent="50"
            android:layout_margin="5sp"
            android:text="@string/created_workouts"
            android:id="@+id/created_workouts"
    />

</android.support.constraint.ConstraintLayout>