<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <Button
            android:text="@string/skills"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:textColor="@color/grey1"
            android:shadowColor="#000000"
            android:shadowDx="5.0"
            android:shadowDy="4.8"
            android:shadowRadius="5.0"
            android:background="@drawable/street_dip_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintWidth_percent="50"
            app:layout_constraintHeight_percent="50"
            android:layout_margin="5sp"
            android:id="@+id/skills"
            />

    <Button
            android:text="@string/your_workouts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:textColor="@color/grey1"
            android:shadowColor="#000000"
            android:shadowDx="5.0"
            android:shadowDy="4.8"
            android:shadowRadius="5.0"
            android:background="@drawable/street_handstand_semi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="50"
            app:layout_constraintHeight_percent="50"
            android:layout_margin="5sp"
            android:id="@+id/created_workouts"
    />

    <Button
            android:text="@string/intelligent_workout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:textColor="@color/grey1"
            android:shadowColor="#000000"
            android:shadowDx="5.0"
            android:shadowDy="4.8"
            android:shadowRadius="5.0"
            android:background="@drawable/street_up_pull"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintWidth_percent="50"
            app:layout_constraintHeight_percent="50"
            android:layout_margin="5sp"
            android:id="@+id/ia_workout"
    />

    <Button
            android:text="@string/premade_workouts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:textColor="@color/grey1"
            android:shadowColor="#000000"
            android:shadowDx="5.0"
            android:shadowDy="4.8"
            android:shadowRadius="5.0"
            android:background="@drawable/street_side"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="50"
            app:layout_constraintHeight_percent="50"
            android:layout_margin="5sp"
            android:id="@+id/premade"
    />


</androidx.constraintlayout.widget.ConstraintLayout>